tests/ui/treat-err-as-bug/eagerly-emit.stderr
error: trimmed_def_paths constructed but no error emitted; use `DelayDm` for lints or `with_no_trimmed_paths` for debugging

error[E0277]: the trait bound `i32: Foo` is not satisfied
  --> $DIR/eagerly-emit.rs:7:11
   |
LL | fn f() -> impl Foo {
   |           ^^^^^^^^ the trait `Foo` is not implemented for `i32`
LL |
LL |     1i32
   |     ---- return type was inferred to be `i32` here
   |
help: this trait has no implementations, consider adding one
  --> $DIR/eagerly-emit.rs:3:1
   |
LL | trait Foo {}
   | ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
